# minibwa-bindings

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY.md  cliff.toml  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: check.yml  publish.yml  pypi.yml  python.yml
minibwa/: CHANGELOG.md  Cargo.toml
minibwa-py/: Cargo.toml  README.md  pixi.toml  pyproject.toml
minibwa-py/python/minibwa/: __init__.py  _minibwa.pyi
minibwa-py/src/: lib.rs
minibwa-py/tests/: test_align.py
minibwa-sys/: Cargo.toml  build.rs
minibwa-sys/shim/: minibwa_shim.c  minibwa_shim.h
minibwa-sys/src/: lib.rs
minibwa-sys/tests/: smoke.rs
minibwa/src/: align.rs  error.rs  hit.rs  index.rs  lib.rs  meth.rs  opts.rs  test_util.rs
minibwa/tests/: concurrency.rs  meth.rs  sam_flags.rs
scripts/: install-hooks.sh  refresh-minibwa.sh
scripts/hooks/: pre-commit
