[workspace]
resolver = "2"
members = ["minibwa-sys", "minibwa"]
exclude = ["minibwa-py"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Nils Homer <nils@fulcrumgenomics.com>"]
repository = "https://github.com/fg-labs/minibwa-bindings"
rust-version = "1.75"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = true
codegen-units = 1
