[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "minibwa"
version = "0.1.0"
requires-python = ">=3.9"
description = "Python bindings for minibwa"
license = { text = "MIT" }
authors = [{ name = "Nils Homer", email = "nils@fulcrumgenomics.com" }]
readme = "README.md"
keywords = ["bioinformatics", "bwa", "alignment", "genomics", "ngs"]
classifiers = [
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/fg-labs/minibwa-bindings"
Repository = "https://github.com/fg-labs/minibwa-bindings"

[tool.maturin]
module-name = "minibwa._minibwa"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true

[tool.ruff]
line-length    = 100
target-version = "py39"
output-format  = "full"
preview        = true

[tool.ruff.lint]
select    = [
    "A",      # Builtin shadowing
    "ARG",    # Unused arguments
    "C901",   # McCabe complexity
    "B",      # bugbear
    "D",      # pydocstyle (docstrings. We have the "google" convention enabled)
    "D204",   # Blank line between class docstring and first (__init__) method
    "D213",   # Summary line should be located on the line after opening quotes
    "E",      # pycodestyle errors
    "LOG",    # flake8-logging
    "LOG015", # (preview rule) Prohibit calls to the root logger
    "F",      # pyflakes
    "I",      # isort
    "N",      # PEP8 naming
    "W",      # pycodestyle warnings
    "Q",      # flake8-quotes
    "RUF008", # Do not use mutable default values for dataclass attributes
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
    "RUF024", # Do not pass mutable objects as values to dict.fromKeys
]
ignore    = [
    "E203",
    "E701",
    "D212",  # summary line should be located on the same line as opening quotes
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
]
unfixable = ["B"]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D103", "D102", "D101", "D100", "D104"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files                       = ["python", "tests"]
strict_optional             = true
strict_equality             = true
check_untyped_defs          = true
disallow_any_generics       = true
disallow_untyped_calls      = true
disallow_untyped_decorators = true
disallow_untyped_defs       = true
no_implicit_optional        = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_configs         = true
python_version              = "3.10"
enable_error_code           = [
    "ignore-without-code",
    "possibly-undefined",
]

[[tool.mypy.overrides]]
module = ["minibwa._minibwa"]
ignore_missing_imports = true
