[package]
name = "minibwa-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
links = "minibwa"
description = "Low-level FFI bindings to minibwa"
keywords = ["bioinformatics", "bwa", "alignment", "ffi", "genomics"]
categories = ["external-ffi-bindings", "science"]
documentation = "https://docs.rs/minibwa-sys"
include = [
    "src/",
    "build.rs",
    "shim/",
    "vendor/",
    "Cargo.toml",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[features]
default = []
gpl-bwtgen = []   # opt-in: vendors GPL bwtgen/QSufSort, changes effective license
openmp = []       # opt-in: threaded libsais indexing

[dependencies]
libc = "0.2"

[dev-dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
bindgen = "0.69"
